; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_oid.c_git_oid__writebuf.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_oid.c_git_oid__writebuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_OID_HEXSZ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @git_oid__writebuf(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i32, i32* @GIT_OID_HEXSZ, align 4
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %7, align 8
  %12 = alloca i8, i64 %10, align 16
  store i64 %10, i64* %8, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = call i32 @git_oid_fmt(i8* %12, i32* %13)
  %15 = load i32*, i32** %4, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @git_buf_puts(i32* %15, i8* %16)
  %18 = load i32*, i32** %4, align 8
  %19 = load i32, i32* @GIT_OID_HEXSZ, align 4
  %20 = call i32 @git_buf_put(i32* %18, i8* %12, i32 %19)
  %21 = load i32*, i32** %4, align 8
  %22 = call i32 @git_buf_putc(i32* %21, i8 signext 10)
  %23 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %23)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @git_oid_fmt(i8*, i32*) #2

declare dso_local i32 @git_buf_puts(i32*, i8*) #2

declare dso_local i32 @git_buf_put(i32*, i8*, i32) #2

declare dso_local i32 @git_buf_putc(i32*, i8 signext) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
